Fix code colors for dark mode

--- a/css/compose.css
+++ b/css/compose.css
@@ -3608,8 +3608,8 @@ details[open]>summary::before {
         --timeline-color: var(--li-prefix-color);
         --timeline-blub-color: var(--timeline-color);
         --timeline-blub-background: var(--base-background);
-        --code-background: var(--neutral-5);
-        --code-color: var(--base-color);
+        --code-background: var(--neutral-d4);
+        --code-color: var(--neutral-5);
         --pre-background: transparent;
         --pre-color: var(--base-color);
         --pre-code-color: var(--neutral-5);
